# elide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix  main.cpp
include/: data_structures.h  lean_lsp.h  lean_server.h  lib.h  mathutil.h  uri_encode.h
include/algorithms/: abufappendcodepointwithcursor.h  appendcolwithcursor.h  checkposixcall.h  getfilepathamongstparents.h
include/datastructures/: abbreviationdict.h  abuf.h  cursor.h  debouncer.h  editorconfig.h  fileconfig.h  filelocation.h  jsonobjectptr.h  leanserverstate.h  lspnonblockingresponse.h  lsprequestid.h  process.h  singlelinetextarea.h  undoer.h  utf8.h  zipper.h
include/definitions/: ctrlkey.h  escapecode.h  infoviewtab.h  keyevent.h  nspacespertab.h  textareamode.h  vimmode.h
include/views/: compile.h  completion.h  ctrlp.h  tilde.h
playground/: makefile  pipes.c
src/: lean_lsp.cpp  main.cpp
src/lib/: lib.cpp  nominal-text  uri_encode.cpp
src/lib/datastructures/: abuf.cpp
src/lib/views/: ctrlp.cpp
test/: CMakeLists.txt  abbreviations.cpp  edit.cpp  lake-completion-cli.cpp  lake-get-messages.cpp  lake-open-file.cpp  lean-server-goto.cpp  lean-server-hover.cpp  lean-server-launch-exit.cpp  lean-server-open-file.cpp  lean-server-open-non-lean-file.cpp  lsp-log.txt  rg.cpp  rg.txt  test_file.lean  test_file.txt  utf8.cpp  uv.cpp
test/box-system/: README.txt  box-system.py
test/lake-testdir/: Main.lean  lakefile.lean  lsp-log.txt
test/litmus/: draw-text-overflow.py  enter.py
